# codesight

./: .codesight_config.toml  .coverage  .flake8  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REFACTORING_SUMMARY.md  UV_GUIDE.md  __init__.py  __main__.py  add_dependency.sh  codecov.yml  codesight-run  codesight-wrapper.sh  codesight.sh  codesight.txt  config.py  config.sh  core.py  coverage.xml  fix_shellcheck.sh  install.sh  pre_release.sh  pyproject.toml  requirements.txt  run_codesight.sh  setup_alias.sh  setup_uv.sh  terminal.py  test_cli.sh  test_init.sh  utils.sh
.github/workflows/: ci.yml  publish.yml  release.yml
codesight/: __main__.py  cli.py
commands/: analyze.sh  help.sh  info.sh  init.sh  visualize.sh
docs/: setup_guide.md  shellcheck_guide.md
libs/analyze/: MIGRATION_PLAN.md  analyze_main.sh  file_collection.sh  output_formatter.sh
src/codesight/: __init__.py  auto_detect.py  cli.py  collate.py  config.py  ignore.py  reporting.py  structure.py  transform.py  validate.py
src/commands/: analyze.sh  cmd_analyze.sh  cmd_visualize.sh  help.sh  info.sh  init.sh  visualize.sh
src/commands/analyze/: analyzer.sh  collector.sh  formatter.sh  processor.sh
src/commands/visualize/: files.sh  tokens.sh
src/core/: config.sh  update.sh
src/utils/: collector.sh  common.sh  gitignore.sh  logo.sh
src/utils/collector/: file_collector.sh
tests/: constants.py  run_tests.sh  test_auto_detect.py  test_collate.py  test_collection_coverage.sh  test_commands.sh  test_config.py  test_dogfood.sh  test_ignore.py  test_reporting.py  test_structure.py  test_style.py  test_transform.py  test_utils.sh  test_validate.py
tests/style/: __init__.py  test_formatting.py  test_imports.py  test_style.py
utils/: common.sh  gitignore.sh  update_check.sh
utils/visualize/: files_report.sh  token_stats.sh
